Estilização concluída para grandes telas

--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ body{
         display: flex;
         justify-content: center;
         margin-bottom: 1em;
+
+        & img{
+            width: 100%;
+            height: 100%;
+            /* object-fit: conta; */
+            object-position: center;
+        }
     }
     & .o-que-e{
         background-image: url('assets/Sem título-1.png');
@@ -39,8 +46,9 @@ body{
 
         & h2{
             padding-block: 1em;
-            font-size: 3.5em;
-            color: white;
+            font-size: 4.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
             text-align: center;
             font-weight: 600;
             /* margin-bottom: 1em; */
@@ -48,13 +56,348 @@ body{
         }
 
         & h4{
-            font-size: 1.5em;
+            font-size: 2.3em;
             color: white;
             text-align: center;
             font-weight: 400;
             letter-spacing: 0.08em;
             /* width: 80%; */
             margin-bottom: 1em;
+        }
+        p{
+            text-shadow: 1px 2px 1px black;
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.05em;
+            width: 80%;
+            margin-bottom: 1em;
+        }
+        & a{
+            width: 30%;
+            text-align: center;
+            font-size: 2.2em;
+            background-color: var(--vermelho3);
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            letter-spacing: 0.08em;
+            padding: 0.5em 1.5em;
+            border-radius: 0.5em;
+            margin-bottom: 1em;
+            transition: all 0.3s ease-in-out;
+
+            &:hover{
+                background-color: white;
+                color: var(--vermelho3);
+            }
+        }
+    }
+
+    & .creator{
+       background-image: url('assets/glacielle.png');
+       background-repeat: no-repeat;
+       background-size: contain;
+       background-position: fixed;
+       background-attachment: fixed;
+        background-color: var(--vinho);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        & h2{
+            padding-block: 1em;
+            font-size: 3.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            /* margin-bottom: 1em; */
+            letter-spacing: 0.12em;
+        }
+
+        & h4{
+            font-size: 1.8em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            /* width: 80%; */
+            margin-bottom: 1em;
+        }
+        p{
+            text-shadow: 1px 2px 1px black;
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            width: 80%;
+            margin-bottom: 1em;
+        }
+    }
+    & .para-quem{
+         background-color: var(--vermelho);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        & h2{
+            padding-block: 1em;
+            font-size: 3.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            /* margin-bottom: 1em; */
+            letter-spacing: 0.12em;
+        }
+
+        & h4{
+            font-size: 1.8em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            /* width: 80%; */
+            margin-bottom: 1em;
+        }
+        p{
+            text-shadow: 1px 2px 1px black;
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            width: 80%;
+            margin-bottom: 1em;
+        }
+    }
+
+    & .como{
+         background-color: var(--vermelho3);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        & h2{
+            padding-block: 1em;
+            font-size: 3.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            /* margin-bottom: 1em; */
+            letter-spacing: 0.12em;
+        }
+
+        & h4{
+            font-size: 1.8em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            /* width: 80%; */
+            margin-bottom: 1em;
+        }
+        p{
+            text-shadow: 1px 2px 1px black;
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            width: 80%;
+            margin-bottom: 1em;
+        }
+    }
+    & .encontrar{
+         background-color: var(--vinho);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        & h2{
+            padding-block: 1em;
+            font-size: 3.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            /* margin-bottom: 1em; */
+            letter-spacing: 0.12em;
+        }
+
+        & h4{
+            font-size: 1.8em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            /* width: 80%; */
+            margin-bottom: 1em;
+        }
+        p{
+            text-shadow: 1px 2px 1px black;
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            width: 80%;
+            margin-bottom: 1em;
+        }
+        & a{
+            width: 30%;
+            text-align: center;
+            font-size: 2.2em;
+            background-color: var(--vermelho);
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            letter-spacing: 0.08em;
+            padding: 0.5em 1.5em;
+            border-radius: 0.5em;
+            margin-bottom: 1em;
+            transition: all 0.3s ease-in-out;
+
+            &:hover{
+                background-color: white;
+                color: var(--vermelho3);
+            }
+        }
+    }
+    .onde{
+        background-image: url('assets/hotel.png');
+       background-repeat: no-repeat;
+       background-size: contain;
+       background-position: fixed;
+       background-attachment: fixed;
+        background-color: var(--vermelho);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        & h2{
+            padding-block: 1em;
+            font-size: 3.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            /* margin-bottom: 1em; */
+            letter-spacing: 0.12em;
+        }
+
+        & h4{
+            font-size: 1.8em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            /* width: 80%; */
+            margin-bottom: 1em;
+        }
+        p{
+            /* text-shadow: 1px 2px 1px black; */
+            font-size: 1.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            width: 80%;
+            margin-bottom: 1em;
+            overflow-y: hidden;
+
+            & a{
+                background-color: var(--vermelho2);
+                border-radius: 5px;
+                padding: 1em;
+                color: white;
+                text-decoration: underline;
+                font-weight: 400;
+                letter-spacing: 0.08em;
+                -webkit-border-radius: 5px;
+                -moz-border-radius: 5px;
+                -ms-border-radius: 5px;
+                -o-border-radius: 5px;
+                transition: all 0.3s ease-in-out;
+                -webkit-transition: all 0.3s ease-in-out;
+                -moz-transition: all 0.3s ease-in-out;
+                -ms-transition: all 0.3s ease-in-out;
+                -o-transition: all 0.3s ease-in-out;
+                &:hover{
+                    background-color: white;
+                    color: var(--vermelho3);
+                }
+            }
+        }
+    }
+
+    & .cta{
+        background-color: var(--vermelho2);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        & h2{
+            padding-block: 1em;
+            font-size: 3.5em;
+            text-shadow: 2px 1px 1px #eed988;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            /* margin-bottom: 1em; */
+            letter-spacing: 0.12em;
+        }
+
+        & h4{
+            font-size: 1.8em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+            /* width: 80%; */
+            margin-bottom: 1em;
+        }
+        p{
+            border: #580002 solid 1px;
+            border-radius: 0.5em;
+            background-color: var(--vermelho3);
+            text-shadow: 1px 2px 1px black;
+            font-size: 2.2em;
+            color: white;
+            text-align: center;
+            font-weight: 400;
+            letter-spacing: 0.06em;
+            width: 40%;
+            margin-bottom: 1em;
+        }
+        & a{
+            width: 30%;
+            text-align: center;
+            font-size: 2.2em;
+            background-color: var(--vermelho);
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            letter-spacing: 0.08em;
+            padding: 0.5em 1.5em;
+            border-radius: 0.5em;
+            margin-bottom: 1em;
+            transition: all 0.3s ease-in-out;
+
+            &:hover{
+                background-color: white;
+                color: var(--vermelho3);
+            }
         }
     }
 }
