--- a/mobile.css
+++ b/mobile.css
@@ -54,6 +54,10 @@
                 font-size: 1.5em;
                 padding: 0.5em 1em;
                 margin: 0.5em;
+
+                &:hover{
+                    background-color: transparent;
+                }
             }
         }
     }
