--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     --vermelho: #950004;
     --vermelho2: #770003;
     --vermelho3: #580002;
-    --vinho: #400c0f;
+    --vinho: #520723
+;
 
 }
 *{
@@ -13,31 +14,31 @@
     box-sizing: border-box;
     font-family: 'Bebas Neue', 'Montserrat', serif;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+    scroll-padding-top: 0;
+    overscroll-behavior: contain;
+    scroll-snap-type: y proximity;
 }
 body{
     width: 100svw;
     background-color: var(--vinho);
     & .hero{
-        width: auto;
-        height: 50em;
+        /* width: auto; */
+        height: 100svh;
         display: flex;
         justify-content: center;
         margin-bottom: 1em;
 
         & img{
-            width: 100%;
+            /* width: 100%; */
             height: 100%;
             /* object-fit: conta; */
             object-position: center;
         }
     }
     & .o-que-e{
-        background-image: url('assets/Sem título-1.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: fixed;
-        background-attachment: fixed;
-        background-color: var(--vermelho);
+        
+        background-color: #fff;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -46,8 +47,8 @@ body{
 
         & h2{
             padding-block: 1em;
-            font-size: 4.5em;
-            text-shadow: 2px 1px 1px #eed988;
+            font-size: 3em;
+            /* text-shadow: 2px 1px 1px #eed988; */
             color: #c78f29;
             text-align: center;
             font-weight: 600;
@@ -56,8 +57,8 @@ body{
         }
 
         & h4{
-            font-size: 2.3em;
-            color: white;
+            font-size: 1.6em;
+            color: #950004;
             text-align: center;
             font-weight: 400;
             letter-spacing: 0.08em;
@@ -65,9 +66,9 @@ body{
             margin-bottom: 1em;
         }
         p{
-            text-shadow: 1px 2px 1px black;
+            /* text-shadow: 1px 2px 1px black; */
             font-size: 1.2em;
-            color: white;
+            color: var(--vermelho2);
             text-align: center;
             font-weight: 400;
             letter-spacing: 0.05em;
@@ -89,7 +90,7 @@ body{
             transition: all 0.3s ease-in-out;
 
             &:hover{
-                background-color: white;
+                background-color: #d4d4d4;
                 color: var(--vermelho3);
             }
         }
@@ -101,12 +102,13 @@ body{
        background-size: contain;
        background-position: fixed;
        background-attachment: fixed;
-        background-color: var(--vinho);
+        background-color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
+        height: 90svh;
         & .description{
             display: flex;
             flex-direction: column;
@@ -127,7 +129,7 @@ body{
     
             & h4{
                 font-size: 1.8em;
-                color: white;
+                color: var(--vermelho);
                 text-align: center;
                 font-weight: 400;
                 letter-spacing: 0.08em;
@@ -135,24 +137,26 @@ body{
                 margin-bottom: 1em;
             }
             p{
-                text-shadow: 1px 2px 1px black;
+                /* text-shadow: 1px 2px 1px black; */
                 font-size: 1.2em;
-                color: white;
+                color: var(--vermelho2);
                 text-align: center;
                 font-weight: 400;
                 letter-spacing: 0.06em;
-                width: 80%;
+                width: 70%;
+                line-height: 1.2em;
                 margin-bottom: 1em;
             }
         }
     }
     & .para-quem{
-         background-color: var(--vermelho);
+         background-color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
+        height: 100svh;
         & h2{
             padding-block: 1em;
             font-size: 3.5em;
@@ -166,7 +170,7 @@ body{
 
         & h4{
             font-size: 1.8em;
-            color: white;
+            color: var(--vermelho);
             text-align: center;
             font-weight: 400;
             letter-spacing: 0.08em;
@@ -174,14 +178,32 @@ body{
             margin-bottom: 1em;
         }
         p{
-            text-shadow: 1px 2px 1px black;
+            /* text-shadow: 1px 2px 1px black; */
             font-size: 1.2em;
-            color: white;
+            color: var(--vermelho2);
             text-align: center;
             font-weight: 400;
+            /* margin-block: 1em; */
             letter-spacing: 0.06em;
             width: 80%;
             margin-bottom: 1em;
+            align-items: center;
+            overflow: visible;
+            white-space: normal;
+            word-break: break-word;
+            height: 2.5em;
+
+            & span{
+                margin-right: 0.5em;
+                padding: 0.4em;
+                border-radius: 50%;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+                -webkit-border-radius: 50%;
+                border: #580002 solid 1px;
+}
         }
     }
 
