--- a/mobile.css
+++ b/mobile.css
@@ -34,32 +34,69 @@
         }
 
         & .para-quem{
+            height: 100%;
+
             & p{
                 font-size: 1.2em;
                 padding: 0.5em 1em;
                 margin: 0.5em;
                 width: 90%;
-                height: 2.5em;
-                overflow: visible;
-            white-space: normal;
-            word-break: break-word;
+                height: auto;
+                line-height: 2em;
             }
             & span{
                 padding: 0.2em;
+                /* margin-bottom: 0.3em; */
                 border-radius: 50%;
-                -webkit-border-radius: 50%;
-                -moz-border-radius: 50%;
-                /* background-color: var(--vermelho2); */
                 color: var(--vermelho2);
             }
         }
 
+        & .como{
+            & h4{
+                font-size: 1.8em;
+                padding: 0.5em 1em;
+                margin: 0.5em;
+                width: 90%;
+                height: auto;
+                letter-spacing: 0.07em;
+                font-weight: 300;
+            }
+            & p{
+                font-size: 1.1em;
+                padding: 0.5em 1em;
+                margin: 0.5em;
+                width: 90%;
+                height: auto;
+                letter-spacing: 0.07em;
+                font-weight: 100;
+                line-height: 2em;
+            }
+        }
+
         & .encontrar{
-            & a{
+            height: 100%;
+
+            & p{
+                font-size: 1.2em;
+                padding: 0.5em 1em;
+                margin: 0.5em;
+                width: 90%;
+                height: auto;
+                line-height: 2em;
+            }
+            & span{
+                padding: 0.2em;
+                /* margin-bottom: 0.3em; */
+                border-radius: 50%;
+                color: var(--vermelho2);
+            }
+            a {
                 width: 100%;
                 font-size: 1.5em;
                 padding: 0.5em 1em;
                 margin: 0.5em;
+                text-align: center;
             }
         }
         & .onde{
