--- a/style.css
+++ b/style.css
@@ -20,14 +20,18 @@
     scroll-snap-type: y proximity;
 }
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100svw;
     background-color: var(--vinho);
     & .hero{
-        /* width: auto; */
+        width: auto;
         height: 100svh;
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
         margin-bottom: 1em;
+        z-index: 1;
 
         & img{
             /* width: 100%; */
@@ -322,9 +326,9 @@ body{
             font-weight: 300;
             letter-spacing: 0.08em;
             padding: 0.5em 1.5em;
-            border-radius: 0.5em;
             margin-bottom: 1em;
             transition: all 0.3s ease-in-out;
+            border-radius: 0.5em;
             -webkit-border-radius: 0.5em;
             -moz-border-radius: 0.5em;
             -ms-border-radius: 0.5em;
@@ -336,23 +340,251 @@ body{
             }
         }
     }
-    .onde{
-        background-image: url('assets/hotel.png');
-       background-repeat: no-repeat;
-       background-size: contain;
-       background-position: fixed;
-       background-attachment: fixed;
-        background-color: var(--vermelho);
+
+    .receber{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        justify-content: center;
+        padding: 2em;
+        border-bottom: #c78f29 solid 1px;
+        width: 100%;
+        & h2{
+            font-size: 2.5em;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            letter-spacing: 0.18em;
+            margin-bottom: 1em;
+        }
+        & #para{
+            background-color: #c78f29;
+            color: white;
+              border-radius: 0.5em;
+            -webkit-border-radius: 0.5em;
+            -moz-border-radius: 0.5em;
+            -ms-border-radius: 0.5em;
+            -o-border-radius: 0.5em;
+
+            & p{
+                color: white;
+                font-weight: 200;
+            }
+        }
+        & i{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            font-size: 1.2em;
+            color: #c78f29;
+            /* margin-bottom: 0.5em; */
+            padding: 1em;
+            & p {
+                overflow-y: hidden;
+                margin-left: 0.5em;
+                font-weight: 100;
+                font-size: 1.5em;
+                color: black;
+                letter-spacing: 0.05em;
+            }
+        }
+        & a{
+            width: 30%;
+            text-align: center;
+            font-size: 2.2em;
+            background-color: #c78f29;
+            color: white;
+            text-decoration: none;
+            font-weight: 400;
+            letter-spacing: 0.15em;
+            padding: 0.5em 1.5em;
+            border-radius: 0.5em;
+            margin-bottom: 1em;
+            transition: all 0.3s ease-in-out;
+
+            &:hover{
+                background-color: white;
+                color: #c78f29;
+                border: #c78f29 solid 1px;
+            }
+        }
+    }
+
+    .galeria{
+        background-color: white;
+        /* padding-block: 2em; */
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 3em;
+        flex-wrap: wrap;
+        border-bottom: #c78f29 solid 1px;
+        gap: 1em;
+        & img{
+            width: 90%;
+            height: auto;
+            border-radius: 0.5em;
+            -webkit-border-radius: 0.5em;
+            -moz-border-radius: 0.5em;
+            -ms-border-radius: 0.5em;
+            -o-border-radius: 0.5em;
+        }
+    }
+    & .para{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
+        background-color: white;
+        padding: 2em;
+        & h2{
+            font-size: 2.5em;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            letter-spacing: 0.18em;
+            margin-bottom: 1em;
+        }
+        & .card{
+             border-radius: 1em;
+             -webkit-border-radius: 1em;
+             -moz-border-radius: 1em;
+             -ms-border-radius: 1em;
+             -o-border-radius: 1em;
+             
+             background-color: #c78f29;
+             color: white;
+             width: 50%;
+             text-align: center;
+             font-weight: 200;
+             padding: 1em;
+                & i{
+                font-size: 4em;
+                color: white;
+                margin-right: 0.5em;
+                overflow-y: hidden;
+                margin-bottom: 0.5em;
+            }
+            & .description, & p {
+                font-weight: 100;
+                font-size: 1.5em;
+                color: white;
+                letter-spacing: 0.05em;
+            }
+        }
+        & .desc{
+            font-size: 1.2em;
+            color: black;
+            text-align: center;
+            font-weight: 100;
+            letter-spacing: 0.05em;
+            width: 50%;
+            margin-bottom: 1em;
+        }
+        & a{
+            width: 30%;
+            text-align: center;
+            font-size: 2.2em;
+            background-color: #c78f29;
+            color: white;
+            text-decoration: none;
+            font-weight: 400;
+            letter-spacing: 0.15em;
+            padding: 0.5em 1.5em;
+            border-radius: 0.5em;
+            margin-bottom: 1em;
+            transition: all 0.3s ease-in-out;
+
+            &:hover{
+                background-color: white;
+                color: #c78f29;
+                border: #c78f29 solid 1px;
+            }
+        }
+    }
+
+    & .depoimentos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        background-color: white;
+        padding: 2em;
+        border-bottom: #c78f29 solid 1px;
+
+        & p{
+            font-size: 1.8em;
+            color: #c78f29;
+            text-align: center;
+            font-weight: 600;
+            letter-spacing: 0.09em;
+            width: 80%;
+            margin-bottom: 1em;
+            overflow-y: hidden;
+        }
+
+        & .video{
+            display: flex;
+            gap: 1em;
+            height: 50em;
+            margin-bottom: 1em;
+            & video{
+                width: 100%;
+                border-radius: 0.5em;
+            }
+        }
+
+    }
+
+    .onde{
+
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        background-color: white;
+        padding: 2em;
+        border-bottom: #c78f29 solid 1px;
+        padding: 2em;
+        
+        & .local{
+            border-radius: 1em;
+                -webkit-border-radius: 1em;
+                -moz-border-radius: 1em;
+                -ms-border-radius: 1em;
+                -o-border-radius: 1em;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 70%;
+            background-color: #c78f29;
+        }
+
+        & img{
+            width: 40%;
+
+ border-radius: 1em;
+             -webkit-border-radius: 1em;
+             -moz-border-radius: 1em;
+             -ms-border-radius: 1em;
+             -o-border-radius: 1em;
+
+
+        }
+        
         & h2{
             padding-block: 1em;
             font-size: 3.5em;
-            text-shadow: 2px 1px 1px #eed988;
-            color: #c78f29;
+            /* text-shadow: 2px 1px 1px #eed988; */
+            color: white;
             text-align: center;
             font-weight: 600;
             /* margin-bottom: 1em; */
@@ -379,89 +611,21 @@ body{
             margin-bottom: 1em;
             overflow-y: hidden;
 
-            & a{
-                background-color: var(--vermelho2);
-                border-radius: 5px;
-                padding: 1em;
-                color: white;
-                text-decoration: underline;
-                font-weight: 400;
-                letter-spacing: 0.08em;
-                -webkit-border-radius: 5px;
-                -moz-border-radius: 5px;
-                -ms-border-radius: 5px;
-                -o-border-radius: 5px;
-                transition: all 0.3s ease-in-out;
-                -webkit-transition: all 0.3s ease-in-out;
-                -moz-transition: all 0.3s ease-in-out;
-                -ms-transition: all 0.3s ease-in-out;
-                -o-transition: all 0.3s ease-in-out;
-                &:hover{
-                    background-color: white;
-                    color: var(--vermelho3);
-                }
-            }
         }
     }
 
-    & .cta{
-        background-color: var(--vermelho2);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        & h2{
-            padding-block: 1em;
-            font-size: 3.5em;
-            text-shadow: 2px 1px 1px #eed988;
-            color: #c78f29;
-            text-align: center;
-            font-weight: 600;
-            /* margin-bottom: 1em; */
-            letter-spacing: 0.12em;
-        }
+    & .footer{
+        background-color: white;
 
-        & h4{
-            font-size: 1.8em;
-            color: white;
+        & p{
+            font-size: 1.2em;
+            color: black;
             text-align: center;
-            font-weight: 400;
-            letter-spacing: 0.08em;
-            /* width: 80%; */
+            font-weight: 100;
+            letter-spacing: 0.05em;
+            width: 80%;
             margin-bottom: 1em;
-        }
-        p{
-            border: #580002 solid 1px;
-            border-radius: 0.5em;
-            background-color: var(--vermelho3);
-            text-shadow: 1px 2px 1px black;
-            font-size: 2.2em;
-            color: white;
-            text-align: center;
-            font-weight: 400;
-            letter-spacing: 0.06em;
-            width: 40%;
-            margin-bottom: 1em;
-        }
-        & a{
-            width: 30%;
-            text-align: center;
-            font-size: 2.2em;
-            background-color: var(--vermelho);
-            color: white;
-            text-decoration: none;
-            font-weight: 600;
-            letter-spacing: 0.08em;
-            padding: 0.5em 1.5em;
-            border-radius: 0.5em;
-            margin-bottom: 1em;
-            transition: all 0.3s ease-in-out;
-
-            &:hover{
-                background-color: white;
-                color: var(--vermelho3);
-            }
         }
     }
+
 }
