--- a/style.css
+++ b/style.css
@@ -570,15 +570,15 @@ body{
 
         & img{
             width: 40%;
+            height: auto;
 
- border-radius: 1em;
-             -webkit-border-radius: 1em;
-             -moz-border-radius: 1em;
-             -ms-border-radius: 1em;
-             -o-border-radius: 1em;
-
-
-        }
+            padding-top: 1em;
+            border-radius: 2em;
+            -webkit-border-radius: 2em;
+            -moz-border-radius: 2em;
+            -ms-border-radius: 2em;
+            -o-border-radius: 2em;
+}
         
         & h2{
             padding-block: 1em;
@@ -616,16 +616,8 @@ body{
 
     & .footer{
         background-color: white;
-
-        & p{
-            font-size: 1.2em;
-            color: black;
-            text-align: center;
-            font-weight: 100;
-            letter-spacing: 0.05em;
-            width: 80%;
-            margin-bottom: 1em;
-        }
+        padding-top: 1em;
+       
     }
 
 }
